# pj02_Daangn-marke

./: .gitattributes  .gitignore  README.md  api.py  app.py  main.py  pyproject.toml
.streamlit/: config.toml
collected_data/: metadata.csv
data/csv/: daangn_polo_tracker.csv  daangn_노스페이스.csv  daangn_노스페이스_labeled.csv  daangn_바지.csv  daangn_폴로.csv  daangn_폴로_labeled.csv
data/dataframes/: daangn_polo_tracker.csv  daangn_polo_tracker_2.csv
data/json/: search_아동복.json  search_아이폰.json  test-polo.json  test_regions.json
data/models/: lgbm_metrics_v21.json
data/models/my_best_ensemble/: catboost_model_0.cbm  catboost_model_1.cbm  catboost_model_2.cbm  catboost_model_3.cbm  catboost_model_4.cbm
data/parquet/: daangn_폴로.parquet
data/team_csv/: merged_dedup.csv  merged_dedup_siglip2_labeled.csv  merged_dedup_siglip2_review.csv
model/: lgbm_best_params_v21.json  lgbm_feature_importance_v21.csv
notebooks/: daangn-API.ipynb  daangn-crawl-images-only.ipynb  daangn-crawler-kjw2.ipynb  daangn-crawler.ipynb  daangn-dedup-data.ipynb  daangn-feature-engineering1.ipynb  daangn-test.ipynb  daangn-test00.ipynb  daangn-test01-emb-ens.ipynb  df-image-match-check.ipynb  junv_dgdata_crawling.ipynb  junv_edit_ipynb.py  junv_test_fc.py  junwoo_test.ipynb  kjw-1-dat_adj.ipynb  kjw-2-feat_ngnr.ipynb  kjw-3-light-gbm.ipynb  kjw-test.ipynb
src/: 00_clip_labeling_pipeline.py  01_siglip_labeling_pipeline.py  01_siglip_labeling_pipline.py  02_retry_crawling_failed_items.py  03_brandName_from_title_content.py  04_title_content_embedding.py  brands_aliases.py  clip_labeling_pipeline.py  predict_pipeline.py  siglip_predictor.py  tempCodeRunnerFile.py
