[project]
name = "pj02_daangn-marke"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "beautifulsoup4>=4.14.3",
    "bing-image-downloader>=1.1.2",
    "bitsandbytes>=0.49.2",
    "catboost>=1.2.10",
    "chromium>=0.0.0",
    "clip @ git+https://github.com/openai/CLIP.git",
    "fastapi>=0.133.0",
    "fastparquet>=2025.12.0",
    "folium>=0.20.0",
    "grad-cam>=1.5.5",
    "jupyter>=1.1.1",
    "koreanize-matplotlib>=0.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "optuna>=4.7.0",
    "pandas>=3.0.0",
    "playwright>=1.58.0",
    "pyarrow>=23.0.1",
    "python-multipart>=0.0.22",
    "pytz>=2026.1.post1",
    "requests>=2.32.5",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools==80.10.2",
    "shap>=0.51.0",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "uuid>=1.30",
    "uvicorn>=0.41.0",
    "xgboost>=3.2.0",
]

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126" # 본인의 CUDA 버전에 맞춤
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-gpu", marker = "sys_platform == 'win32'" },
  { index = "pytorch-gpu", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-gpu", marker = "sys_platform == 'win32'" },
  { index = "pytorch-gpu", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-gpu", marker = "sys_platform == 'win32'" },
  { index = "pytorch-gpu", marker = "sys_platform == 'linux'" },
]

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true

[tool.ruff.lint]
select = [ 
    "E",   
    "F",   
    "I",   
    "B",   
    "C4",  
    "UP",  
    "N",   
    "SIM", 
]
ignore = [
    "E501",
    "N803",
    'N812',
    'E401',
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"*.py" = ["ANN", "INP001"]

[tool.mypy]
ignore_missing_imports = true
